# compiler

./: .gitignore  CMakeLists.txt  README.md  grammar.md  specification.md
examples/: factorial.zlang  fibonacci.zlang  hello.zlang  types.zlang
specs/: codegen.md  grammar.md  semantics.md  types.md
src/: CMakeLists.txt  __init__.py  ast_nodes.py  codegen.py  lexer.py  main.py  parser.py  semantic.py
tests/: __init__.py  test_codegen.py  test_lexer.py  test_parser.py  test_semantic.py
